--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           Marine Logistics
         </p>
         <p class="description-text">
-          We ensure the process of planning impplementing, 
+          We ensure the process of planning implementing, 
           and managing the movement of goods and information throught the ocean carriage.
         </p>
         <button class="description-button" id="mobile-button">
@@ -117,7 +117,7 @@
       },
       {
         title: 'Marine Logistics',
-        body: 'We ensure the process of planning impplementing, and managing the movement of goods and information throught the ocean carriage',
+        body: 'We ensure the process of planning implementing, and managing the movement of goods and information throught the ocean carriage',
         image: 'public/images/background-img.png'
       },
       {
