--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Adeppo Group</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="public/images/logo1.jpg">
+  <link rel="preload" as="image">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style type="text/css">
