--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="public/images/logo1.jpg">
   <link rel="preload" as="image" href="public/images/background-img.png">
+  <link rel="preload" as="image" href="public/images/oil-and-gas.png">
+  <link rel="preload" as="image" href="public/images/renewable-energy.png">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style type="text/css">
