--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       background-image: url(public/images/background-img.png);
       background-size: cover;
       transition: background-image 0.2s ease-in-out;
+      overflow-y: hidden;
+      max-height: 100vh;
     }
   </style>
 </head>
