--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       overflow-y: hidden;
       max-height: 100vh;
     }
+
+    .container {
+      overflow-y: hidden;
+    }
   </style>
 </head>
 
