--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       background-size: cover;
       transition: background-image 0.2s ease-in-out;
       overflow-y: hidden;
+      background-position: center;
     }
 
   </style>
