--- a/contact-us-page.html
+++ b/contact-us-page.html
@@ -28,14 +28,14 @@
                 <li><a href="oil-and-gas.html" class="nav-link">Oil and Gas</a></li>
                 <li><a href="logistics.html" class="nav-link">Marine Logistics</a></li>
                 <li><a href="renewable-energy.html" class="nav-link">Renewable Energy</a></li>
-                <li><a href="#" class="nav-link-b | is-small-screen">Our Services</a></li>
+                <!-- <li><a href="#" class="nav-link-b | is-small-screen">Our Services</a></li> -->
                 <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
             </ul>
         </nav>
         <div class="services-nav">
-            <p class="our-services">
+            <!-- <p class="our-services">
                 Our Services
-            </p>
+            </p> -->
             <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
             <button class="oil-and-gas-button" style="background: #293037;">
                 <a href="contact-us-page.html" class="contact-button" style="color: transparent;">
