--- a/logistics.html
+++ b/logistics.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelector('.services-nav a[href="#otherservices"]').addEventListener('click', function(e) {
+            e.preventDefault();
+
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+            });
+        });
+</script>
     <div class="page-container">
         <div class="nav-wrapper">
             <div class="logo-image">
@@ -38,7 +49,7 @@
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                    Our Services
+                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037;"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #060454;">
@@ -267,7 +278,7 @@
         </section>
         <section>
             <div class="section-container">
-                <div class="grid-container">
+                <div class="grid-container" id="otherservices">
                     <p class="other-services">Other Services</p>
                     <div class="image-row">
                         <div class="oil-service-image">
