--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -14,6 +14,18 @@
 </head>
 
 <body>
+    <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                document.querySelector('.services-nav a[href="#otherservices"]').addEventListener('click', function(e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+                });
+            });
+    </script>
+
     <div class="page-container">
         <div class="nav-wrapper">
             <div class="logo-image">
@@ -34,12 +46,12 @@
                     </div>
                     <li><a href="logistics.html" class="nav-link">Marine Logistics</a></li>
                     <li><a href="renewable-energy.html" class="nav-link">Renewable Energy</a></li>
-                    <li><a href="#" class="nav-link-b | is-small-screen">Our Services</a></li>
+                    <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                    Our Services
+                   <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037;"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #774E26">
@@ -290,8 +302,8 @@
         </section>
         <section>
             <div class="section-container">
-                <div class="grid-container">
-                    <p class="other-services">Other Services</p>
+                <div class="grid-container" id="otherservices">
+                    <p class="other-services" >Other Services</p>
                     <div class="image-row">
                         <div class="marine-logistics-image">
                             <a href="logistics.html" class="page-link">
