--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -30,11 +30,18 @@
                 const ourServicesLink = document.querySelector('.services-nav a[href="#otherservices"]');
 
                 // Add click event listener to the Our Services link
-                ourServicesLink.addEventListener('click', function() {
+                ourServicesLink.addEventListener('click', function(e) {
                     // Close the mobile navigation menu by toggling the aria-expanded attribute
                     const isExpanded = mobileNavToggle.getAttribute('aria-expanded') === 'true';
                     mobileNavToggle.setAttribute('aria-expanded', String(!isExpanded));
-                    // You can also close the navigation visually by adding CSS classes or styles here
+
+                    // You can also add code here to visually close the navigation menu
+                    // For example, you can add a CSS class to hide the menu when aria-expanded is false
+                    if (!isExpanded) {
+                        document.querySelector('.primary-navigation').classList.add('hidden');
+                    } else {
+                        document.querySelector('.primary-navigation').classList.remove('hidden');
+                    }
                 });
             });
     </script>
