--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -33,6 +33,7 @@
     function toggleMobileMenu() {
         const isExpanded = mobileNavToggle.getAttribute('aria-expanded') === 'true';
         mobileNavToggle.setAttribute('aria-expanded', String(!isExpanded));
+        console.log('!isExpanded');
 
         // Hide mobileNavToggle when the navigation menu is closed
         if (!isExpanded) {
