--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -38,8 +38,10 @@
         // Hide mobileNavToggle when the navigation menu is closed
         if (!isExpanded) {
             mobileNavToggle.style.display = 'none';
+            console.log("hhhh");
         } else {
             mobileNavToggle.style.display = 'block'; // or 'inline-block' based on your design
+            console.log("block");
         }
     }
 
