--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -25,37 +25,19 @@
                 });
             });
             document.addEventListener('DOMContentLoaded', function() {
-  // Select the mobile nav toggle button and the Our Services link
-  const mobileNavToggle = document.getElementById('mobileNavToggle');
-  const ourServicesLink = document.querySelector('.services-nav a[href="#otherservices"]');
+                // Select the mobile nav toggle button and the Our Services link
+                const mobileNavToggle = document.getElementById('mobileNavToggle');
+                const ourServicesLink = document.querySelector('.services-nav a[href="#otherservices"]');
 
-  // Function to toggle mobile navigation menu
-  function toggleMobileMenu() {
-      const isExpanded = mobileNavToggle.getAttribute('aria-expanded') === 'true';
-      mobileNavToggle.setAttribute('aria-expanded', String(!isExpanded));
-      console.log('!isExpanded');
-
-      // Hide mobileNavToggle when the navigation menu is closed
-      if (!isExpanded) {
-          mobileNavToggle.style.display = 'none';
-          console.log("hhhh");
-      } else {
-          mobileNavToggle.style.display = 'none'; // or 'inline-block' based on your design
-          console.log("block");
-      }
-  }
-
-  // Add click event listener to the Our Services link
-  ourServicesLink.addEventListener('click', function(e) {
-      e.preventDefault();
-      toggleMobileMenu();
-  });
-
-  // Add click event listener to mobileNavToggle to show the menu when clicked
-  mobileNavToggle.addEventListener('click', function() {
-      toggleMobileMenu();
-  });
-});
+                // Add click event listener to the Our Services link
+                ourServicesLink.addEventListener('click', function() {
+                    // Close the mobile navigation menu by toggling the aria-expanded attribute
+                    const isExpanded = mobileNavToggle.getAttribute('aria-expanded') === 'true';
+                    mobileNavToggle.setAttribute('aria-expanded', String(!isExpanded));
+                    console.log(mobileNavToggle.getAttribute);
+                    // You can also close the navigation visually by adding CSS classes or styles here
+                });
+            });
     </script>
 
     <div class="page-container">
@@ -63,7 +45,7 @@
             <div class="logo-image">
                 <a href="index.html"><img src="public/images/logo1.jpg" alt="Adeppo-group logo"></a>
             </div>
-            <button class="mobile-nav-toggle" id="mobileNavToggle" onclick="toggleMobileMenu()" aria-controls="primary-navigation" aria-expanded="false">
+            <button class="mobile-nav-toggle" id="mobileNavToggle" aria-controls="primary-navigation" aria-expanded="false">
                 <img class="icon-hamburger" src="public/images/icon-hamburger.svg" alt="" aria-hidden="false">
                 <span class="visually-hidden">Menu</span>
             </button>
