--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -26,8 +26,8 @@
             });
             document.addEventListener('DOMContentLoaded', function() {
                 // Select the mobile nav toggle button and the Our Services link
-                const mobileNavToggle = document.getElementById('mobileNavToggle');
-                const ourServicesLink = document.querySelector('.services-nav a[href="#otherservices"]');
+                const mobileNavToggle = document.getElementsByClassName('mobile-nav-toggle');
+                const ourServicesLink = document.querySelector('.nav-link-b.is-small-screen[href="#otherservices"]');
 
                 // Add click event listener to the Our Services link
                 ourServicesLink.addEventListener('click', function() {
@@ -45,7 +45,7 @@
             <div class="logo-image">
                 <a href="index.html"><img src="public/images/logo1.jpg" alt="Adeppo-group logo"></a>
             </div>
-            <button class="mobile-nav-toggle" id="mobileNavToggle" aria-controls="primary-navigation" aria-expanded="false">
+            <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
                 <img class="icon-hamburger" src="public/images/icon-hamburger.svg" alt="" aria-hidden="false">
                 <span class="visually-hidden">Menu</span>
             </button>
