--- a/logistics.html
+++ b/logistics.html
@@ -22,18 +22,23 @@
             });
         });
 
-        document.addEventListener('DOMContentLoaded', function() {
-                // Select the mobile nav toggle button and the Our Services link
-                const mobileNavToggle = document.getElementById('mobileNavToggle');
-                const ourServicesLink = document.querySelector('.services-nav a[href="#otherservices"]');
+            document.addEventListener('DOMContentLoaded', function() {
+                // Select all elements with the class 'mobile-nav-toggle'
+                const mobileNavToggles = document.querySelectorAll('.mobile-nav-toggle');
+                
+                // Select the Our Services link
+                const ourServicesLink = document.querySelector('.nav-link-b.is-small-screen[href="#otherservices"]');
+
+                // Add click event listener to each mobile nav toggle button
 
                 // Add click event listener to the Our Services link
-                ourServicesLink.addEventListener('click', function() {
-                    // Close the mobile navigation menu by toggling the aria-expanded attribute
-                    const isExpanded = mobileNavToggle.getAttribute('aria-expanded') === 'true';
-                    mobileNavToggle.setAttribute('aria-expanded', String(!isExpanded));
-                    // You can also close the navigation visually by adding CSS classes or styles here
-                });
+                ourServicesLink.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                    document.querySelector('.primary-navigation').removeAttribute('data-visible');
+                }); 
             });
 </script>
     <div class="page-container">
