--- a/logistics.html
+++ b/logistics.html
@@ -271,7 +271,7 @@
                             <p class="header-text">
                                 Services
                             </p>
-                            <p class="body-text">
+                            <p class="body-text" id="otherservices">
                                 Our dedicated and knowledgeable staff can handle all the Marine agency requirements
                                 of
                                 your project,
@@ -297,7 +297,7 @@
         </section>
         <section>
             <div class="section-container">
-                <div class="grid-container" id="otherservices">
+                <div class="grid-container">
                     <p class="other-services">Other Services</p>
                     <div class="image-row">
                         <div class="oil-service-image">
