--- a/renewable-energy.html
+++ b/renewable-energy.html
@@ -470,7 +470,7 @@
                                 </div>
                             </div>
                             <div class="footer-nav-col">
-                                <P class="footer-nav-header">
+                                <P class="footer-nav-header" id="otherservices">
                                     Services
                                 </P>
                                 <ul class="nav-item-list">
