--- a/logistics.html
+++ b/logistics.html
@@ -268,10 +268,10 @@
                 <div class="services-even-columns">
                     <div class="services-column1">
                         <div class="services-text">
-                            <p class="header-text">
+                            <p class="header-text" id="otherservices">
                                 Services
                             </p>
-                            <p class="body-text" id="otherservices">
+                            <p class="body-text">
                                 Our dedicated and knowledgeable staff can handle all the Marine agency requirements
                                 of
                                 your project,
