--- a/renewable-energy.html
+++ b/renewable-energy.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="column2">
                         <div class="renewable-list" style="--flow-spacer: 1em">
-                            <p class="list-header | ren-list-header">
+                            <p class="list-header | ren-list-header" id="otherservices">
                                 Services
                             </p>
                             <ul class="renewable-numbered-items" role="list">
@@ -470,7 +470,7 @@
                                 </div>
                             </div>
                             <div class="footer-nav-col">
-                                <P class="footer-nav-header" id="otherservices">
+                                <P class="footer-nav-header">
                                     Services
                                 </P>
                                 <ul class="nav-item-list">
