--- a/logistics.html
+++ b/logistics.html
@@ -266,9 +266,9 @@
         <section>
             <div class="services-section-container">
                 <div class="services-even-columns">
-                    <div class="services-column1">
+                    <div class="services-column1" id="otherservices">
                         <div class="services-text">
-                            <p class="header-text" id="otherservices">
+                            <p class="header-text">
                                 Services
                             </p>
                             <p class="body-text">
