--- a/logistics.html
+++ b/logistics.html
@@ -157,7 +157,7 @@
                                         Fair payment plan
                                     </p>
                                     <p class="section-list-text-body">
-                                        We give fair rate for our logistics plan,
+                                        We give fair rates for our logistics plan, and
                                         also provide reasonable payment plan for our client to pay subsequentially.
                                     </p>
                                 </div>
@@ -178,7 +178,7 @@
                                 <div class="indicator"></div>
                                 <div class="section-list-text">
                                     <p class="section-list-text-header">
-                                        Time Wasted = zero
+                                        Zero time wasted
                                     </p>
                                     <p class="section-list-text-body">
                                         It takes us little to no time to respond to your request and after proper
