--- a/logistics.html
+++ b/logistics.html
@@ -90,7 +90,7 @@
                             Helping Push <br/> businesses<br/> across
                             the sea
                         </p>
-                        <p class="irrespective">irrespective of <em class="alternate-color">anywhere in the
+                        <p class="irrespective">irrespective of <em class="alternate-color">location in the
                                 world</em>
                         </p>
                     </div>
@@ -166,7 +166,7 @@
                                 <div class="indicator"></div>
                                 <div class="section-list-text">
                                     <p class="section-list-text-header">
-                                        Whichever sea, we can navigate
+                                        We can navigate any sea conditions
                                     </p>
                                     <p class="section-list-text-body">
                                         Our marine supply chain logistics is not limited.
