--- a/logistics.html
+++ b/logistics.html
@@ -166,7 +166,7 @@
                                 <div class="indicator"></div>
                                 <div class="section-list-text">
                                     <p class="section-list-text-header">
-                                        We can navigate any sea conditions
+                                        We can navigate tough sea conditions
                                     </p>
                                     <p class="section-list-text-body">
                                         Our marine supply chain logistics is not limited.
