--- a/logistics.html
+++ b/logistics.html
@@ -158,7 +158,7 @@
                                     </p>
                                     <p class="section-list-text-body">
                                         We give fair rates for our logistics plan, and
-                                        also provide reasonable payment plan for our client to pay subsequentially.
+                                        also provide reasonable payment plan for our clients.
                                     </p>
                                 </div>
                             </li>
