--- a/logistics.html
+++ b/logistics.html
@@ -170,7 +170,7 @@
                                     </p>
                                     <p class="section-list-text-body">
                                         Our marine supply chain logistics is not limited.
-                                        We have processed document and license to navigate any sea co-ordinate.
+                                        We have processed documents and licenses to navigate any sea co-ordinate.
                                     </p>
                                 </div>
                             </li>
