--- a/logistics.html
+++ b/logistics.html
@@ -181,8 +181,9 @@
                                         Zero time wasted
                                     </p>
                                     <p class="section-list-text-body">
-                                        It takes us little to no time to respond to your request and after proper
-                                        review of document start shipment
+                                        
+                                        It takes us little to no time to respond to your request, and start shipment
+                                        after proper review of documents.
                                     </p>
                                 </div>
                             </li>
