--- a/contact-us-page.html
+++ b/contact-us-page.html
@@ -308,7 +308,7 @@
                         <br />
                         <br />
                     </p>
-                    <p class="all-rights-reserved">© 2022 Adeppo Groups. All Rights Reserved.</p>
+                    <p class="all-rights-reserved">© 2023 Adeppo Group. All Rights Reserved.</p>
                     <div class="empty-space"></div>
                 </div>
             </div>
