--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           Marine Logistics
         </p>
         <p class="description-text">
-          We ensure the process of planning implementing, 
-          and managing the movement of goods and information throught the ocean carriage.
+          We ensure the process of planning, implementing, 
+          and managing the movement of goods and information involved in the ocean carriage.
         </p>
         <button class="description-button" id="mobile-button">
           <p class="button-description-text">View site</p>
