--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       },
       {
         title: 'Renewable Energy',
-        body: 'We find ways to generate energy from (theoretically unlimted) natural resources',
+        body: 'We find ways to generate energy from unlimted natural resources',
         image: 'public/images/renewable-energy.png'
       },
     ];
