--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       },
       {
         title: 'Marine Logistics',
-        body: 'We ensure the process of planning implementing, and managing the movement of goods and information throught the ocean carriage',
+        body: 'We ensure the process of planning, implementing, and managing the movement of goods and information involved in the ocean carriage',
         image: 'public/images/background-img.png'
       },
       {
