--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     var details = [
       {
         title: 'Oil and Gas',
-        body: 'Providing services such as constructing rigs, designing pipes and pipelines, carrying out technical, construction works and supplies among others',
+        body: 'We provide both upstream and downstream oil and gas services to our clients.',
         image: 'public/images/oil-and-gas.png'
       },
       {
