--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     var details = [
       {
         title: 'Oil and Gas',
-        body: 'We provide both upstream and downstream oil and gas advisory services to our clients.',
+        body: 'We provide both upstream and downstream oil and gas advisory services to our clients',
         image: 'public/images/oil-and-gas.png'
       },
       {
